# NISHA

./: .gitignore  AGENT_INTEGRATION_GUIDE.md  INTEGRATION_PLAN_SUMMARY.md  MASTER_INTEGRATION_GUIDE.md  MOBILE_MASTER_EXECUTION_PLAN.md  MOBILE_MASTER_INTEGRATION_PLAN.md  Nisha_integration_PRD.md  README.md  STARTUP_GUIDE.md  SYSTEM_ARCHITECTURE_VISUAL.md  SYSTEM_OPERATIONS.md  fixes.md  network_switch.sh  pipline.md  setup.sh  share.md
Backend/: .env.example  .gitignore  Agent_management_PRD.doc  Audio_processing.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Backend/.claude/agent-memory/project-technical-writer/: MEMORY.md  nisha_audio_init.md  user_profile.md
Backend/.claude/agents/: project-technical-writer.md
Backend/migrations/: env.py
Backend/migrations/versions/: 001_initial_schema.py  002_audio_support.py  002_phase2_mesh_resilience.py  003_video_events.py  4f1c57c0fe38_add_hardware_type_and_stream_url_to_.py  cd0de5acf638_add_audio_data_to_audio_events.py
Backend/src/nisha/: config.py  dependencies.py  main.py
Backend/src/nisha/api/: errors.py
Backend/src/nisha/api/middleware/: auth.py
Backend/src/nisha/api/schemas/: agent.py  audio.py  command.py  common.py  master.py  topology.py  video.py
Backend/src/nisha/api/v1/: agents.py  audio.py  masters.py  mobile.py  router.py  system.py  topology.py  video.py  ws.py
Backend/src/nisha/domain/events/: agent_events.py  audio_events.py  video_events.py
Backend/src/nisha/domain/models/: __init__.py  agent.py  audio.py  command.py  config.py  enums.py  handoff.py  master.py  video.py
Backend/src/nisha/domain/ports/: agent_repository.py  audio_repository.py  cache.py  command_repository.py  event_bus.py  master_repository.py  video_repository.py
Backend/src/nisha/domain/services/: health.py  lifecycle.py  mesh.py
Backend/src/nisha/infrastructure/cache/: redis_cache.py
Backend/src/nisha/infrastructure/database/: models.py  session.py  writer.py
Backend/src/nisha/infrastructure/database/repositories/: agent_repo.py  audio_repo.py  command_repo.py  master_repo.py  (+1 more)
Backend/src/nisha/infrastructure/messaging/: event_bus.py
Backend/src/nisha/infrastructure/websocket/: connection_manager.py  protocol.py
Backend/src/nisha/scripts/: clear_data.py
Backend/src/nisha/services/: adaptive_streaming.py  agent_service.py  ai_processor.py  alert_generator.py  audio_service.py  command_service.py  config_service.py  correlation_engine.py  failover_service.py  handoff_service.py  heartbeat_monitor.py  master_service.py  telegram_service.py  topology_service.py  video_inference_service.py  video_service.py
Backend/tests/: conftest.py
Backend/tests/unit/domain/: test_config.py  test_handoff.py  test_health.py  test_heartbeat_monitor.py  test_lifecycle.py  test_mesh.py
Backend/tests/unit/services/: test_audio_service.py
masters/: .env.example  .gitignore  RPi_MASTER_SETUP.md  SETUP_GUIDE.md  pyproject.toml  simulate_agents.py
masters/src/nisha_master/: config.py  main.py
masters/src/nisha_master/core/: audio_buffer.py  buffer.py  hardware_worker.py  triangulation.py
masters/src/nisha_master/interfaces/: agent_ws.py  backend_client.py  dashboard.py
masters/src/nisha_master/static/: dashboard.js  index.html  style.css
(+153 files in other folders)
