[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nisha-master"
version = "0.1.0"
description = "NISHA Edge Relay Hub - Raspberry Pi Master Node"
requires-python = ">=3.11"
dependencies = [
    # Fast WebSocket server for ESP32s
    "websockets>=12.0",

    # Dashboard & HTTP APIs
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Efficient client for Backend WSS & Multipart HTTP Fallback
    "aiohttp>=3.9.0",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Triangulation Engine Math
    "numpy>=1.26.0",

    # Logging and System
    "structlog>=24.4.0",
    "psutil>=5.9.0",
    "agora-token-builder>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/nisha_master"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]